got full database of original products to appear on page

--- a/index.html
+++ b/index.html
@@ -47,20 +47,9 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<div id="apparel">
-					<h2>Apparel</h2>
-					<p>sweater apparel $2.99</p>
+				<div id="products">
+
 				</div>
-				<div id="furniture">
-					<h2>Furniture</h2>
-				</div>
-				<div id="household">
-					<h2>Household</h2>
-				</div>
-
-
-
-
 
 			</div><!--end column of page content-->
 		</div><!--end row of page content-->
